[package]
name = "token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version="0.29.0", features=["init-if-needed","event-cpi"]}
anchor-spl = "0.29.0"
spl-tlv-account-resolution = "0.4.0"
spl-token-2022 = "0.9.0"
spl-transfer-hook-interface = "0.3.0"
