[package]
name = "token_transfer_hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version="0.30.0", features=["init-if-needed"]}
anchor-spl = "0.30.0"
spl-tlv-account-resolution = "0.4.0"
spl-token-2022 = "0.9.0"
spl-transfer-hook-interface = "0.3.0"
